--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,18 @@
   </head>
 
   <body>
-    <div class="container">
-      <%= yield %>
+  <div class="container">
+    <div class="row justify-content-md-center">
+      <div class="col-md-8">
+        <div class="card text-center mt-4 mb-4">
+          <div class="card-body">
+            Welcome to Instatalk, <b><%= current_user.nickname %></b>!
+          </div>
+        </div>
+
+        <%= yield %>
+      </div>
     </div>
+  </div>
   </body>
 </html>
