--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -3,7 +3,7 @@
     <div class="form-group">
       <div class="input-group">
         <%= text_field_tag :message_body, '', class: 'form-control',
-                           placeholder: 'Enter message' %>
+                           placeholder: 'Enter message', autofocus: 'true', :required => true %>
       </div>
     </div>
   <% end %>
