--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for @room do |f| %>
   <div class="actions">
-    <%= f.submit 'Create Room', class: 'btn btn-outline-primary' %>
+    <%= f.submit 'Create new Room', class: 'btn btn-sm btn-outline-secondary' %>
   </div>
 <% end %>
