--- a/app/views/rooms/_room.html.erb
+++ b/app/views/rooms/_room.html.erb
@@ -1,1 +1,1 @@
-<li><strong>Room #<%= room.id %></strong> — <%= link_to 'Join', room %></li>
+<li>Chat Room #<%= room.id %> — <%= link_to 'Join', room, class: 'link' %></li>
