--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,11 +1,13 @@
-<p id="notice"><%= notice %></p>
+<div class="card ps-4 pb-3">
+  <p id="notice"><%= notice %></p>
 
-<h1>Rooms</h1>
+  <h1>Chat Rooms</h1>
 
-<ul class="mt-4 list-unstyled">
-  <%= render @rooms %>
-</ul>
+  <ul class="mt-4 list-unstyled">
+    <%= render @rooms %>
+  </ul>
 
-<div class="mt-2">
-  <%= render 'rooms/form', room: @room %>
+  <div class="mt-2">
+    <%= render 'rooms/form', room: @room %>
+  </div>
 </div>
