--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,13 +1,15 @@
-<div class="row message mt-1">
-  <div class="col-2 font-weight-bold text-info">
-    <%= message.user.nickname %>
+<div class="row message mb-3">
+  <div class="col-2 font-monospace text-secondary">
+    @<%= message.user.nickname %>
   </div>
 
-  <div class="col-10">
-    <div class="float-right small badge badge-light">
-      <%= message.created_at.strftime("%H:%M") %>
+  <div class="col-10 d-flex justify-content-between">
+    <div class="ps-3">
+      <%= message.body %>
     </div>
 
-    <div><%= message.body %></div>
+    <div class="badge bg-secondary m-1">
+      <%= message.created_at.strftime("%H:%M") %>
+    </div>
   </div>
 </div>
